--- a/src/app/components/usure-analysis/usure-analysis.component.html
+++ b/src/app/components/usure-analysis/usure-analysis.component.html
@@ -1,4 +1,4 @@
-<app-picture-popup></app-picture-popup>
+<app-picture-popup id="cameraPopup" class="hidden"></app-picture-popup>
 
 <h1 class="text-3xl font-bold mb-6">Formulaire d'Analyse d'Usure</h1>
 <form (submit)="this.onSubmit($event)" class="w-full max-w-lg mx-auto">
@@ -12,8 +12,8 @@
       <input
         id="vehicle"
         name="vehicle"
-        required
         type="text"
+        required
         placeholder="Nom du véhicule"
         class="appearance-none block w-full bg-gray-200 text-gray-700 border rounded py-3 px-4 mb-3 leading-tight focus:outline-none focus:bg-white"
       />
@@ -47,29 +47,69 @@
       </div>
     </div>
   </div>
-  <div class="flex flex-wrap -mx-3 mb-6">
+
+  <div class="-mx-3 mb-6">
     <div class="w-full px-3">
       <label
-        for="picture"
         class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2"
-        >Prendre une photo</label
+        >Photos des pneus</label
       >
-      <button
-        (click)="sharedService.openPopup()"
-        type="button"
-        id="openModal"
-        class="bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
-      >
-        Prendre une photo
-      </button>
-      <p *ngIf="this.sharedService.analysisImageUrl; else elseBlock">
-        Image was taken successfully
-      </p>
-      <ng-template #elseBlock>
-        <p>Please take a picture</p>
-      </ng-template>
+      <div class="flex flex-col justify-center items-start gap-3">
+        <div class="flex justify-center items-center gap-2">
+          <button
+            (click)="sharedService.openPopup(FrontLeft)"
+            type="button"
+            class="w-36 bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"
+          >
+            Avant Gauche
+          </button>
+          <p *ngIf="sharedService.analysisImagesUrl[FrontLeft]">
+            Photo avant gauche prise avec succès
+          </p>
+        </div>
+
+        <div class="flex justify-center items-center gap-2">
+          <button
+            (click)="sharedService.openPopup(FrontRight)"
+            type="button"
+            class="w-36 bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"
+          >
+            Avant Droite
+          </button>
+          <p *ngIf="sharedService.analysisImagesUrl[FrontRight]">
+            Photo avant droite prise avec succès
+          </p>
+        </div>
+
+        <div class="flex justify-center items-center gap-2">
+          <button
+            (click)="sharedService.openPopup(RearLeft)"
+            type="button"
+            class="w-36 bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"
+          >
+            Arrière Gauche
+          </button>
+          <p *ngIf="sharedService.analysisImagesUrl[RearLeft]">
+            Photo arrière gauche prise avec succès
+          </p>
+        </div>
+
+        <div class="flex justify-center items-center gap-2">
+          <button
+            (click)="sharedService.openPopup(RearRight)"
+            type="button"
+            class="w-36 bg-purple-500 hover:bg-purple-700 text-white font-bold py-2 px-2 rounded focus:outline-none focus:shadow-outline"
+          >
+            Arrière Droite
+          </button>
+          <p *ngIf="sharedService.analysisImagesUrl[RearRight]">
+            Photo arrière droite prise avec succès
+          </p>
+        </div>
+      </div>
     </div>
   </div>
+
   <div class="flex justify-between">
     <button
       type="button"
